--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,7 @@ a:hover:before {
     flex-direction: column;
     align-items: center;
     height: 80vh;
-    width: 30vw;
+    width: 80vw;
     padding: 10px;
     background-color: rgb(223, 223, 223);
 }
@@ -67,7 +67,7 @@ a:hover:before {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 5px;
+    gap: 50px;
 }
 
 .dashboard-block input {
@@ -78,4 +78,9 @@ a:hover:before {
 
 .dashboard-block input:focus, textarea {
     outline: none !important;
+}
+
+.list-item {
+    border: 1px solid black;
+    width: 200px;
 }
