basic functionality with adding and subtracting points on handleCheck and handleAdd functions

--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,10 @@ a:hover:before {
     padding: 2px;
 }
 
+.list-item input {
+    width: 15px;
+}
+
 .check-btn {
     background-color: rgb(24, 206, 0);
 }
