--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
 nav {
     width: 100vw;
     height: 40px;
-    padding: 5px;
+    padding: 15px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -118,4 +118,16 @@ a:hover:before {
     right: 0;
     border-top: 1px solid;
     border-color: gray;
+  }
+
+  .coins-img {
+    width: 85px;
+  }
+
+  .points-nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-left: 1000px;
   }
