good progress on adding and subtracting points based on the users points and task/leisure reward/cost

--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,10 @@ a:hover:before {
     gap: 10px;
 }
 
+.logo {
+    width: 95px;
+}
+
 .input-button {
     display: flex;
     flex-direction: column;
@@ -84,10 +88,9 @@ a:hover:before {
     flex-direction: row;
     justify-content: space-around;
     align-items: center;
-    gap: 10px;
     border: 1px solid black;
-    width: 300px;
-    padding: 2px;
+    width: 500px;
+    padding: 0px;
 }
 
 .list-item input {
