--- a/src/App.css
+++ b/src/App.css
@@ -101,11 +101,28 @@ a:hover:before {
 .list-item {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     align-items: center;
+    justify-content: center;
     border: 1px solid black;
     width: 500px;
     padding: 0px;
+}
+
+.list-btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  margin-right: 100px;
+}
+
+.list-txt {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
 
 .list-item input {
@@ -113,18 +130,25 @@ a:hover:before {
 }
 
 .check-btn {
+  height: 25px;
     background-color: rgb(24, 206, 0);
-    border-radius: 10px;
+    border: none;
+    border-radius: 2px;
 }
 
 .delete-btn {
-    background-color: red;
-    border-radius: 10px;
+  height: 25px;
+  background-color: red;
+  border: none;
+  border-radius: 2px;
 }
 
-/* .scratched {
-    text-decoration: line-through;
-} */
+.edit-btn {
+  height: 26px;
+  background-color: rgb(255, 255, 255);
+  border: none;
+  border-radius: 2px;
+}
 
 .scratched {
     position: relative;
@@ -307,3 +331,4 @@ a:hover:before {
   .shop-text {
     font-size: large;
   }
+
