--- a/src/App.css
+++ b/src/App.css
@@ -343,7 +343,65 @@ a:hover:before {
     border-radius: 4px;
     transition: background-color 0.3s ease-in-out;
   }
-  
-  .add-task-btn:hover {
-    background-color: #f26d21;
+
+  .dropdown {
+    position: relative;
+    display: inline-block;
   }
+
+  .dropdown button {
+    padding-right: 5px;
+    position: relative;
+  }
+  
+  .btn {
+    background-color: rgb(238, 149, 47);
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    position: relative;
+  }
+  
+  .btn:focus {
+    outline: none;
+  }
+  
+  .dropdown-menu {
+    position: absolute;
+    top: calc(100% + 2px);
+    left: 0;
+    display: none;
+    padding: 2px;
+    margin: 2px 0 0;
+    font-size: 14px;
+    text-align: center;
+    background-color: rgba(94, 94, 94, 0.5);
+    border-radius: 20px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  }
+  
+  .dropdown-menu.show {
+    display: block;
+  }
+  
+  .dropdown-menu .dropdown-item {
+    padding: 5px 20px;
+    clear: both;
+    font-weight: 900;
+    color: #ffffff;
+    background-color: transparent;
+    border: none;
+    border-radius: 1230px;
+  }
+  
+  .dropdown-menu .dropdown-item:hover {
+    color: #fff;
+    text-decoration: none;
+    background-color: rgb(238, 149, 47);
+  }
+  
+  .dropdown-menu a:hover {
+    background-color: rgb(238, 149, 47);
+  }
+  
