--- a/src/App.css
+++ b/src/App.css
@@ -99,58 +99,29 @@ a:hover:before {
 }
 
 .list-item {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    border: 1px solid black;
+    background-color: rgba(255, 255, 255, 0.35);
     width: 500px;
-    padding: 0px;
-}
-
-.list-btns {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  gap: 5px;
-  margin-right: 100px;
+    height: 80px;
 }
 
 .list-txt {
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  align-items: center;
-  gap: 5px;
+}
+
+.list-txt h4 {
+  margin: 0;
 }
 
 .list-item input {
     width: 15px;
 }
 
-.check-btn {
-  height: 25px;
-    background-color: rgb(24, 206, 0);
-    border: none;
-    border-radius: 2px;
-}
-
-.delete-btn {
-  height: 25px;
-  background-color: red;
-  border: none;
-  border-radius: 2px;
-}
-
-.edit-btn {
-  height: 26px;
-  background-color: rgb(255, 255, 255);
-  border: none;
-  border-radius: 2px;
-}
-
 .scratched {
+  text-decoration: line-through;
+}
+
+/* .scratched {
     position: relative;
   }
 
@@ -162,7 +133,7 @@ a:hover:before {
     right: 0;
     border-top: 1px solid;
     border-color: rgb(68, 68, 68);
-  }
+  } */
 
   .coins-img {
     width: 88px;
@@ -344,23 +315,39 @@ a:hover:before {
     transition: background-color 0.3s ease-in-out;
   }
 
+  /* dropdown menu */
+
+  .drop-wrap {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 500px;
+  }
+
+  .drop-wrap p {
+    padding-left: 10px;
+  }
+
   .dropdown {
+    padding-right: 10px;
     position: relative;
     display: inline-block;
   }
-
-  .dropdown button {
-    padding-right: 5px;
-    position: relative;
-  }
   
   .btn {
-    background-color: rgb(238, 149, 47);
-    color: #fff;
+    height: 30px;
+    width: 30px;
+    border-radius: 50px;
+    background-color: transparent;
+    color: rgb(0, 0, 0);
     border: none;
-    border-radius: 4px;
     cursor: pointer;
-    position: relative;
+    font-size: 21px;
+  }
+
+  .btn:hover {
+    background-color: rgba(255, 255, 255, 0.2);
   }
   
   .btn:focus {
@@ -369,14 +356,13 @@ a:hover:before {
   
   .dropdown-menu {
     position: absolute;
-    top: calc(100% + 2px);
-    left: 0;
+    top: calc(-50%);
     display: none;
-    padding: 2px;
-    margin: 2px 0 0;
+    padding: 3px;
+    margin: 0 0 0 50px;
     font-size: 14px;
     text-align: center;
-    background-color: rgba(94, 94, 94, 0.5);
+    background-color: rgba(94, 94, 94, 0.35);
     border-radius: 20px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
   }
@@ -392,16 +378,23 @@ a:hover:before {
     color: #ffffff;
     background-color: transparent;
     border: none;
-    border-radius: 1230px;
+    border-radius: 12230px;
   }
   
-  .dropdown-menu .dropdown-item:hover {
-    color: #fff;
-    text-decoration: none;
-    background-color: rgb(238, 149, 47);
-  }
-  
-  .dropdown-menu a:hover {
-    background-color: rgb(238, 149, 47);
-  }
+.dropdown-menu .dropdown-item:hover {
+  cursor: pointer;
+}
+
+.check-btn:hover {
+  color: #2bdb31;
+}
+
+.delete-btn:hover {
+  color: #f93333;
+}
+
+.edit-btn:hover {
+  color: black;
+}
+
   
