--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    background-color: rgb(203, 203, 203);
+    background-color: rgb(217, 217, 217);
     font-family: 'Barlow', sans-serif;
 }
 
@@ -42,8 +42,6 @@ nav a:before {
 nav span a {
     padding: 0px 0px;
     margin: 0px 0px;
-    /* display: inline-block;
-    position: relative; */
 }
 
 nav span a:before {
@@ -91,7 +89,10 @@ a:hover:before {
 .dashboard-block input {
     padding: 10px;
     width: 250px;
-    border: 3px solid black;
+    background-color: rgba(156, 156, 156, 0.8);
+    border: 2px solid rgba(200, 200, 200, 0.1);
+    border-radius: 25px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
 }
 
 .dashboard-block input:focus, textarea {
@@ -102,6 +103,7 @@ a:hover:before {
     background-color: rgba(255, 255, 255, 0.35);
     width: 500px;
     height: 80px;
+    border-radius: 15px;
 }
 
 .list-txt {
@@ -117,23 +119,38 @@ a:hover:before {
     width: 15px;
 }
 
+.list-item-leisure {
+  background-color: rgba(152, 152, 152, 0.35);
+  width: 500px;
+  height: 80px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 15px;
+}
+
+.list-item-leisure h4 {
+  margin-left: 10px;
+}
+
+.check-btn-leisure {
+  border: none;
+  color: rgb(62, 170, 19);
+  background-color: transparent;
+  margin-right: 10px;
+  font-size: 25px
+}
+
+.check-btn-leisure:hover {
+  cursor: pointer;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 20px;
+}
+
 .scratched {
   text-decoration: line-through;
 }
-
-/* .scratched {
-    position: relative;
-  }
-
-  .scratched:before {
-    position: absolute;
-    content: "";
-    left: 0;
-    top: 50%;
-    right: 0;
-    border-top: 1px solid;
-    border-color: rgb(68, 68, 68);
-  } */
 
   .coins-img {
     width: 88px;
@@ -183,7 +200,7 @@ a:hover:before {
   }
   
   .signup-form button[type="submit"]:hover {
-    background-color: rgb(238, 149, 47);
+    background-color: #3e8e41;
   }
   
   .login-form {
