--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,14 @@ body {
     font-family: 'Barlow', sans-serif;
 }
 
+form input:focus, textarea {
+  outline: none !important;
+}
+
 nav {
-    width: 100vw;
+    position: sticky;
+    top: 0;
+    width: 100%;
     height: 40px;
     padding: 15px;
     display: flex;
@@ -15,6 +21,11 @@ nav {
     align-items: center;
     gap: 45px;
     background-color: rgba(255, 255, 255, 0.5);
+}
+
+.nav-color {
+  background-color: rgba(255, 255, 255, 0.9);
+  color: black;
 }
 
 nav a {
@@ -93,6 +104,7 @@ a:hover:before {
     border: 2px solid rgba(200, 200, 200, 0.1);
     border-radius: 25px;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    text-align: center;
 }
 
 .dashboard-block input:focus, textarea {
@@ -101,6 +113,13 @@ a:hover:before {
 
 .list-item {
     background-color: rgba(255, 255, 255, 0.35);
+    width: 500px;
+    height: 80px;
+    border-radius: 15px;
+}
+
+.red-list-item {
+    background-color: rgba(221, 4, 4, 0.35);
     width: 500px;
     height: 80px;
     border-radius: 15px;
@@ -243,61 +262,42 @@ a:hover:before {
     background-color: #3e8e41;
   }
 
-  main {
-    padding: 25px;
-  }
-
   a {
-    color: rgb(239, 143, 32);
+    color: rgb(240, 130, 5);
     font-size: 20px;
     font-weight: 900;
     text-decoration: none;
   }
-  
-  .hero-section {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    max-width: 1200px;
+
+ .top {
+    background-color: rgba(94, 94, 94, 0.15);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    padding: 20px;
+  }
+
+.top span {
+    font-weight: 900;
   }
   
-  .hero-text {
-    flex-basis: 50%;
-    padding-right: 50px;
+  .hero-section {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 15rem;
   }
   
   .hero-text h1 {
     font-size: 4rem;
-    margin-bottom: 20px;
+    margin: 0;
   }
 
   .hero-text p {
     font-size: 1.2rem;
-    margin-bottom: 40px;
-  }
-  
-  .button {
-    display: inline-block;
-    padding: 10px 20px;
-    border-radius: 5px;
-    background-color: #4CAF50;
-    color: #fff;
-    text-decoration: none;
-    transition: background-color 0.2s ease-out;
-  }
-  
-  .button:hover {
-    background-color: #3e8e41;
-  }
-  
-  .hero-image {
-    flex-basis: 45%;
-    margin-bottom: 20px;
   }
 
   .hero-image img {
-    margin-top: 100px;
-    width: 550px;
+    width: 42vw;
     height: auto;
     border-radius: 50px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -306,6 +306,85 @@ a:hover:before {
   
   .hero-image img:hover {
     transform: scale(1.1);
+  }
+
+  .middle {
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 8rem;
+    align-items: center;
+  }
+
+  .how-to {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 25rem;
+  }
+
+  .how-to-txt {
+    text-align: center;
+    width: 15rem;
+  }
+
+  .reminder {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+    height: 50px;
+  }
+
+  .update-page {
+    height: 90vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .update-page form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .update-page form input {
+    padding: 10px;
+    width: 250px;
+    background-color: rgba(156, 156, 156, 0.8);
+    border: 2px solid rgba(200, 200, 200, 0.1);
+    border-radius: 25px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    text-align: center;
+  }
+
+  .update-page button {
+    background-color: rgb(238, 149, 47);
+    border: none;
+    color: #fff;
+    padding: 12px 24px;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 25px;
+  }
+
+  .update-page button:hover {
+    background-color: #3e8e41;
+    transition: 0.2s;
+  }
+
+  .button:hover {
+    background-color: #3e8e41;
   }
 
   .dash {
