--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,14 @@ form input:focus, textarea {
   outline: none !important;
 }
 
+#red-msg {
+  color: red;
+}
+
+#green-msg {
+  color: #1d9221;
+}
+
 nav {
     position: sticky;
     top: 0;
@@ -113,13 +121,6 @@ a:hover:before {
 
 .list-item {
     background-color: rgba(255, 255, 255, 0.35);
-    width: 500px;
-    height: 80px;
-    border-radius: 15px;
-}
-
-.red-list-item {
-    background-color: rgba(221, 4, 4, 0.35);
     width: 500px;
     height: 80px;
     border-radius: 15px;
@@ -501,4 +502,18 @@ a:hover:before {
   color: #2bdb31;
 }
 
-  
+.poof {
+  position: relative;
+  animation: poof 0.5s ease-out;
+}
+
+@keyframes poof {
+  0% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  100% {
+    opacity: 0;
+    transform: scale(3);
+  }
+}
