--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,8 @@ nav {
   top: 0;
   width: 100%;
   height: 40px;
-  padding: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -35,6 +36,7 @@ nav {
 .nav-color {
   background-color: black;
   color: rgba(255, 255, 255);
+  width: 100%;
 }
 
 nav a {
@@ -200,6 +202,7 @@ a:hover:before {
     border-radius: 5px;
     background-color: #f6f6f6;
     margin-top: 150px;
+    overflow-x: hidden;
   }
   
   .signup-form label {
@@ -245,6 +248,7 @@ a:hover:before {
     border-radius: 5px;
     background-color: #f6f6f6;
     margin-top: 150px;
+    overflow-x: hidden;
   }
   
   .login-form label {
@@ -477,14 +481,14 @@ a:hover:before {
     width: 31px;
     border-radius: 30px;
     background-color: transparent;
-    color: rgb(0, 0, 0);
+    color: rgb(91, 91, 91);
     border: none;
     cursor: pointer;
     font-size: 21px;
   }
 
   .btn:hover {
-    background-color: rgba(255, 255, 255, 0.2);
+    color: rgba(0, 0, 0);
   }
   
   .btn:focus {
@@ -547,5 +551,109 @@ a:hover:before {
   }
   100% {
     opacity: 1;
+  }
+}
+
+@media (max-width: 880px) {
+  .how-to {
+    gap: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+
+  .hero-section {
+    flex-direction: column;
+  }
+
+  .hero-text h1 -a{
+    font-size: 1px;
+  }
+
+  .hero-image img {
+    width: 70vw;
+    margin-top: 2rem;
+  }
+
+  .how-to {
+    flex-direction: column;
+    gap: 2rem;
+  }
+
+  .reminder {
+    font-size: 0.9rem;
+    padding: 0.5rem;
+  }
+
+  .list-item,
+  .list-item-leisure {
+    width: 50vw;
+    font-size: 12px;
+    padding: 2.5px;
+  }
+
+  .drop-wrap {
+    width: 50vw;
+  }
+
+  .dropdown-menu {
+    position: absolute;
+    top: calc(-30%);
+    display: none;
+    padding: 3px;
+    margin: 0 0 0 50px;
+    font-size: 14px;
+    text-align: center;
+    background-color: rgba(94, 94, 94, 0.35);
+    border-radius: 20px;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  }
+}
+
+@media (max-width: 700px) {
+  nav {
+    gap: 1px;
+    font-size: 16px;
+  }
+
+  nav a {
+    font-size: 16px;
+  }
+
+  .logo {
+    width: 50px;
+  }
+
+  .coins-img {
+    width: 50px;
+  }
+}
+
+@media (max-width: 435px) {
+  nav {
+    gap: 1px;
+    font-size: 12px;
+  }
+
+  nav a {
+    font-size: 12px;
+  }
+
+  .logo {
+    width: 30px;
+  }
+
+  .coins-img {
+    width: 30px;
+  }
+
+  .list-item,
+  .list-item-leisure {
+    width: 50vw;
+    font-size: 11px;
+  }
+
+  .drop-wrap {
+    width: 50vw;
   }
 }
