--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
   padding: 0;
   overflow-x: hidden;
-  background-color: rgb(217, 217, 217);
+  background: rgb(215, 215, 215);
   font-family: 'Poppins', sans-serif;
 }
 
@@ -21,39 +21,63 @@ textarea {
 }
 
 nav {
+  height: 2.4rem;
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
   position: sticky;
   top: 0;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  transition: box-shadow 0.3s ease;
+}
+
+a {
+  color: black;
+}
+
+nav.scrolled {
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   width: 100%;
-  height: 40px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+}
+
+.navbar-container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
-  gap: 45px;
-  background-color: rgba(255, 255, 255, 1);
-  z-index: 1000;
-}
-
-.nav-color {
-  background-color: black;
-  color: rgba(255, 255, 255);
   width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-nav a {
+.logo-container {
+  margin-left: 2rem;
+}
+
+.nav-links {
+  display: flex;
+  gap: 3rem;
+  margin-right: 2rem;
+}
+
+.nav-links a {
   font-weight: bold;
   font-size: 18px;
   text-transform: uppercase;
   text-decoration: none;
   color: rgb(239, 143, 32);
-  padding: 20px 0px;
-  margin: 0px 20px;
+  padding: 15px 0px;
   display: inline-block;
   position: relative;
 }
 
-nav a:before {
+.nav-links a:before {
   transition: 300ms;
   height: 5px;
   content: "";
@@ -79,6 +103,61 @@ a:hover:before {
   color: rgb(0, 0, 0);
   opacity: 1;
   width: 100%;
+}
+
+.hamburger {
+  display: none;
+  margin-right: 2rem;
+  background-color: transparent;
+}
+
+@media screen and (max-width: 850px) {
+  .nav-links {
+    display: none;
+  }
+
+  .logo-coins-container {
+    gap: 15rem;
+  }
+
+  .nav-links a:before {
+    transition: 300ms;
+    height: 0px;
+    content: "";
+    position: absolute;
+    width: 0%;
+    bottom: 0px;
+  }
+
+  .hamburger {
+    display: flex;
+    background: transparent;
+  }
+
+  .nav-links.show {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(245, 245, 245);
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    padding: 1rem 0;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .nav-links.show a {
+    padding: 0.5rem;
+    text-align: center;
+  }
+
+  .nav-link:hover {
+    background-color: black;
+    color: white;
+    transition: 0.4s ease;
+  }
 }
 
 .dash {
@@ -243,7 +322,7 @@ a:hover:before {
   padding: 3px;
   font-size: 14px;
   text-align: center;
-  background-color: rgba(94, 94, 94, 0.85);
+  background-color: rgba(94, 94, 94, 0.95);
   border-radius: 20px;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
 }
@@ -375,9 +454,6 @@ a:hover:before {
 /*  */
 
 @media screen and (max-width: 475px) {
-
-  /* STYLES FOR THE WHOLE DASHBOARD. MAKE IT COLUMN. Also make each section take up a good portion of the screen */
-  /* ALSO MAKE 3 DOTS and PTS COLUMN */
   .dash {
     width: 100vw;
     height: 100%;
@@ -444,12 +520,25 @@ a:hover:before {
   align-items: center;
   justify-content: center;
   gap: .3rem;
+  font-size: 1.2rem;
 }
 
 .coin-icon {
+  height: 35px;
+  width: 35px;
+  fill: rgb(214, 136, 46);
+}
+
+.nav-link-logout {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.logout-icon {
   height: 30px;
   width: 30px;
-  fill: rgb(214, 136, 46);
 }
 
 .three-icon {
@@ -457,209 +546,103 @@ a:hover:before {
   width: 20px;
 }
 
-.signup-form {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  background-color: #f6f6f6;
-  margin-top: 150px;
-  overflow-x: hidden;
-}
+/*  */
+/*  */
+/*  */
 
-.signup-form label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-.signup-form input[type="email"],
-.signup-form input[type="password"] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.signup-form button[type="submit"] {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  background-color: rgb(239, 143, 32);
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.signup-form button[type="submit"]:hover {
-  background-color: #3e8e41;
-}
-
-.err-msg {
-  color: red;
+.home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
-}
-
-.login-form {
-  max-width: 400px;
-  margin: 0 auto;
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  background-color: #f6f6f6;
-  margin-top: 150px;
   overflow-x: hidden;
-}
-
-.login-form label {
-  display: block;
-  margin-bottom: 5px;
-  font-weight: bold;
-}
-
-.login-form input[type="email"],
-.login-form input[type="password"] {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 20px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
-.login-form button[type="submit"] {
-  display: block;
-  width: 100%;
-  padding: 10px;
-  background-color: rgb(238, 149, 47);
-  color: #fff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.login-form button[type="submit"]:hover {
-  background-color: #3e8e41;
-}
-
-a {
-  color: rgb(240, 130, 5);
-  font-size: 20px;
-  font-weight: 900;
-  text-decoration: none;
-}
-
-.top {
-  background-color: black;
-  color: rgb(217, 217, 217);
-  padding: 20px;
 }
 
 .hero-section {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  padding: 4rem;
-  height: 72vh;
-  animation: fadeIn 1s ease-in-out forwards;
-  margin-top: 1rem;
+  justify-content: space-around;
+  height: 100vh;
+  width: 100vw;
+  background-image: url("../public/home.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  color: rgb(240, 240, 240);
 }
 
-.hero-text span {
-  color: rgb(244, 156, 54);
-}
-
-.hero-text a {
-  display: inline-block;
-  padding: 1rem 2rem;
-  margin-top: 2rem;
-  background-color: rgb(244, 156, 54);
-  color: black;
+.hero-section a {
   text-decoration: none;
-  border-radius: 1rem;
 }
 
-.hero-text a:hover {
-  background-color: black;
-  color: rgb(244, 156, 54);
+.hero-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-text h1 {
+  font-size: 5.5rem;
+  margin: 0;
+  text-transform: uppercase;
+  background: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 5rem;
+  padding: 5px;
 }
 
 .hero-text p {
   font-size: 1.5rem;
-  margin-bottom: 2rem;
-}
-
-.hero-text h1 {
-  font-size: 4rem;
-  margin: 0;
-}
-
-.hero-image img {
-  width: 42vw;
-  height: auto;
-  border-radius: 50px;
-  transition: transform 0.2s ease-out;
-  border: 0.5rem solid rgb(244, 156, 54);
-}
-
-.hero-image img:hover {
-  transform: scale(1.1);
+  background: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 5rem;
+  padding: 5px;
 }
 
 .middle {
-  padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 8rem;
   align-items: center;
-  padding: 4rem;
+  width: 100%;
+  gap: 3rem;
+  background-color: rgb(232, 232, 232);
+  padding: 1rem 0rem 1rem 0rem;
 }
 
 .how-to {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 25rem;
+  flex-direction: row;
+  gap: 5rem;
+  text-align: center;
 }
 
 .how-to-txt {
-  text-align: center;
-  width: 15rem;
-  margin-bottom: 2rem;
-}
-
-.how-to-txt h2 {
-  font-size: 2rem;
-  margin-bottom: 1rem;
-}
-
-.how-to-txt p {
-  font-size: 1.5rem;
-  margin-bottom: 0.5rem;
+  background-color: #f9f9f9;
+  padding: 20px;
+  border-radius: 10px;
 }
 
 .reminder {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  font-size: 1rem;
-  padding: 1rem;
-  background-color: rgb(244, 156, 54);
-  color: black;
-  gap: 10px;
+  background-color: #f9f9f9;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+  margin-top: 20px;
+  max-width: 800px;
 }
 
 footer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: black;
+  background-color: #333;
   color: white;
-  height: 50px;
+  text-align: center;
+  padding: 10px;
+  width: 100%;
 }
+
+/*  */
+/*  */
+/*  */
 
 .update-page {
   height: 100vh;
@@ -721,5 +704,252 @@ footer {
 
   100% {
     opacity: 1;
+  }
+}
+
+/*  */
+
+.form__group {
+  position: relative;
+  padding: 20px 0 0;
+  width: 100%;
+  max-width: 180px;
+}
+
+.form__field {
+  font-family: inherit;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid #9b9b9b;
+  outline: 0;
+  font-size: 17px;
+  color: #fff;
+  padding: 7px 0;
+  background: transparent;
+  transition: border-color 0.2s;
+}
+
+.form__field::placeholder {
+  color: transparent;
+}
+
+.form__field:placeholder-shown~.form__label {
+  font-size: 17px;
+  cursor: text;
+  top: 20px;
+}
+
+.form__label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 17px;
+  color: #d3d3d3;
+  pointer-events: none;
+}
+
+.form__field:focus {
+  padding-bottom: 6px;
+  font-weight: 700;
+  border-width: 3px;
+  border-image: linear-gradient(to right, rgba(255, 117, 0, 1), rgba(255, 135, 38, 1));
+  border-image-slice: 1;
+}
+
+.form__field:focus~.form__label {
+  position: absolute;
+  top: 0;
+  display: block;
+  transition: 0.2s;
+  font-size: 17px;
+  color: rgb(255, 117, 0);
+  font-weight: 700;
+}
+
+.form__field:required,
+.form__field:invalid {
+  box-shadow: none;
+}
+
+.signin-page {
+  height: 100vh;
+  background: rgb(255, 117, 0);
+  background: linear-gradient(90deg, rgba(255, 117, 0, 1) 15%, rgba(255, 135, 38, 1) 41%, rgba(255, 118, 16, 1) 85%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.signin-form {
+  width: 50vw;
+  height: 30vh;
+  padding-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  background: black;
+  border-radius: 2rem;
+}
+
+.signin-btn {
+  background-color: rgba(255, 117, 0, 1);
+  border: none;
+  color: #fff;
+  padding: 12px 24px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 25px;
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.2) 0%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0) 100%);
+  background-position: -100% 50%;
+  background-size: 200% 100%;
+  transition: all 0.4s;
+  width: 200px;
+}
+
+.signin-btn:hover {
+  background-color: #3e8e41;
+  background-position: 100% 50%;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .signin-form {
+    width: 80vw;
+    height: 50vh;
+    padding-top: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    background: black;
+    border-radius: 2rem;
+  }
+}
+
+.arrow-btn {
+  font-size: 1rem;
+  --primary-color: black;
+  --secondary-color: rgb(255, 255, 255);
+  --hover-color: rgb(244, 156, 54);
+  --arrow-width: 10px;
+  --arrow-stroke: 2px;
+  box-sizing: border-box;
+  border: 0;
+  border-radius: 40px;
+  color: var(--secondary-color);
+  padding: 1.5em 2em;
+  background: var(--primary-color);
+  display: flex;
+  transition: 0.2s background;
+  align-items: center;
+  gap: 0.6em;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.arrow-btn .arrow-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.arrow-btn .arrow {
+  margin-top: 1px;
+  width: var(--arrow-width);
+  background: var(--primary-color);
+  height: var(--arrow-stroke);
+  position: relative;
+  transition: 0.2s;
+}
+
+.arrow-btn .arrow::before {
+  content: "";
+  box-sizing: border-box;
+  position: absolute;
+  border: solid var(--secondary-color);
+  border-width: 0 var(--arrow-stroke) var(--arrow-stroke) 0;
+  display: inline-block;
+  top: -3px;
+  right: 3px;
+  transition: 0.2s;
+  padding: 3px;
+  transform: rotate(-45deg);
+}
+
+.arrow-btn:hover {
+  background-color: var(--hover-color);
+}
+
+.arrow-btn:hover .arrow {
+  background: var(--secondary-color);
+}
+
+.arrow-btn:hover .arrow:before {
+  right: 0;
+}
+
+.cards {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.card-description {
+  background-color: white;
+  color: black;
+  height: 9rem;
+  width: 10rem;
+  border-radius: 1rem;
+}
+
+.card-icon {
+  height: 60px;
+  width: 60px;
+}
+
+.smile {
+  height: 60px;
+  width: 60px;
+}
+
+.reminder span {
+  color: rgb(239, 143, 32);
+}
+
+@media screen and (max-width: 650px) {
+  .cards {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .hero-text h1 {
+    font-size: 3.5rem;
+  }
+
+  .hero-text p {
+    font-size: 1rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .how-to {
+    flex-direction: column;
   }
 }
